traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:22: error: type mismatch;
 found   : Unit
 required: Int
     diag = if(getY() == 0) 0
            ^